[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ingame/stage/minigame3/ScripsGm3/stoppedarrow_up.gd" type="Script" id=1]
[ext_resource path="res://src/ingame/stage/minigame3/TresAnim/CensSetsGood_up.tres" type="Animation" id=2]
[ext_resource path="res://assets/art/ingame/stage/minigame 3/setas/cima.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Stop_up_Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="stoppedarrow_up" type="Area2D"]
script = ExtResource( 1 )

[node name="Stop_up_Colision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Stop_up_Norm" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3

[node name="Stop_up_Good" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
hframes = 3
frame = 2

[node name="Stop_up_Bad" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 3

[node name="Stop_up_Anim" type="AnimationPlayer" parent="."]
anims/Good_up = ExtResource( 2 )
anims/RESET = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_stoppedarrow_up_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_stoppedarrow_up_area_shape_exited"]
